--- a/nexora-crypto-dashboard/webapps/dashboard/src/app/home-auth/home-auth.component.html
+++ b/nexora-crypto-dashboard/webapps/dashboard/src/app/home-auth/home-auth.component.html
@@ -59,7 +59,7 @@
                   <th>Crypto</th>
                   <th>Quantité</th>
                   <th>Prix unitaire</th>
-                  <th>Total payé</th>
+                  <th>Total</th>
                 </tr>
               </thead>
               <tbody>
