--- a/nexora-crypto-dashboard/webapps/dashboard/src/app/_authentification/reset-password/reset-password.component.html
+++ b/nexora-crypto-dashboard/webapps/dashboard/src/app/_authentification/reset-password/reset-password.component.html
@@ -18,6 +18,10 @@
             <div *ngIf="submit && resetForm.get('newPassword')?.hasError('required')" class="text-danger mt-1">
               Le mot de passe requis.
             </div>
+            <div *ngIf="submit && resetForm.get('newPassword')?.hasError('pattern')" class="text-danger mt-1">
+              Le mot de passe doit contenir au moins 12 caractères, dont une majuscule, une minuscule et un chiffre et un caractère
+              spéciale.
+            </div>
           </div>
           <div class="mb-3">
             <label for="confirmPassword" class="form-label">Confirmer le mot de passe</label>
