--- a/nexora-crypto-dashboard/webapps/dashboard/src/app/_authentification/register/register.component.html
+++ b/nexora-crypto-dashboard/webapps/dashboard/src/app/_authentification/register/register.component.html
@@ -45,6 +45,9 @@
             <div *ngIf="submit && registerForm.get('password')?.hasError('required')" class="text-danger mt-1">
               Le champ ne peut pas être vide.
             </div>
+            <div *ngIf="submit && registerForm.get('password')?.hasError('pattern')" class="text-danger mt-1">
+              Le mot de passe doit contenir au moins 12 caractères, dont une majuscule, une minuscule et un chiffre et un caractère spéciale.
+            </div>
           </div>
           <div class="mb-3">
             <label for="confirmPassword" class="form-label">Confirmer le mot de passe</label>
