--- a/nexora-crypto-dashboard/webapps/dashboard/src/app/_commons/header/header.component.html
+++ b/nexora-crypto-dashboard/webapps/dashboard/src/app/_commons/header/header.component.html
@@ -16,10 +16,10 @@
           <a class="nav-link" style="cursor: pointer;" (click)="navigateAccueil()">Accueil</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/buy&sell-coin">Acheter des cryptos</a>
+          <a class="nav-link" routerLink="/buy&sell-coin">Marchés des cryptos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/markets">Marchés</a>
+          <a class="nav-link" routerLink="/markets">Évolution des cours</a>
         </li>
       </ul>
 
