--- a/nexora-crypto-dashboard/webapps/dashboard/src/app/home-not-auth/home-not-auth.component.html
+++ b/nexora-crypto-dashboard/webapps/dashboard/src/app/home-not-auth/home-not-auth.component.html
@@ -8,7 +8,7 @@
       <div class="col-md-6 mb-4">
         <h1>Rejoignez l'aventure dès le début !</h1>
         <p>Soyez parmi les premiers à explorer la simulation et à tester vos stratégies en cryptomonnaie.</p>
-        <a routerLink="/register" class="btn btn-primary" role="button">Commencer</a>
+        <a routerLink="/register" class="btn btn-primary" role="button">Rejoindre</a>
       </div>
 
       <div class="col-md-6">
@@ -21,7 +21,7 @@
 <section class="cta-section text-center text-light py-5">
   <div class="container">
     <h2>Plongez dans la simulation crypto dès maintenant !</h2>
-    <a routerLink="/register" class="btn btn-primary mt-3" role="button">S'inscrire maintenant</a>
+    <a routerLink="/demo" class="btn btn-primary mt-3" role="button">Allons-y !</a>
   </div>
 </section>
 
