--- a/nexora-crypto-dashboard/webapps/dashboard/src/app/markets/markets.component.html
+++ b/nexora-crypto-dashboard/webapps/dashboard/src/app/markets/markets.component.html
@@ -2,6 +2,7 @@
 
 <section class="crypto-section py-4">
   <div class="crypto-table-container p-3">
+    <h1>Veuillez sélectionner une monnaie pour voir le graphe d'évolution</h1>
     <div class="crypto-table p-3 rounded-3">
       <div class="table-header d-flex justify-content-between px-3 pb-2 text-light fw-bold">
         <span>Nom</span>
