--- a/nexora-crypto-dashboard/webapps/dashboard/src/app/_commons/crypto-details/crypto-details.component.html
+++ b/nexora-crypto-dashboard/webapps/dashboard/src/app/_commons/crypto-details/crypto-details.component.html
@@ -2,7 +2,8 @@
           <div class="card-body">
             <h1>Cryptos disponible sur le marchés</h1>
             <ul class="list-unstyled mb-0">
-              <li *ngFor="let coin of coins" class="crypto-item d-flex justify-content-between align-items-center mb-2" (click)="selectCoin(coin)">
+              <li *ngFor="let coin of coins" class="crypto-item d-flex justify-content-between align-items-center mb-2" 
+              (click)="selectCoin(coin)" [ngClass]="{'active-coin': selectedCoin === coin}">
                 <div class="d-flex align-items-center">
                   <img *ngIf="coin" [src]="coin.icon" alt="{{ coin.cryptoName }}" width="30" height="30" class="me-2">
                   <span>{{ coin?.cryptoName || 'Chargement...' }}</span>
